fix flicker color

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -530,7 +530,7 @@ img {
     color: transparent;
   }
   50% {
-    color: #1f1f24;
+    color: var(--tc-neutral-0);
   }
   100% {
     color: transparent;
